
set(BINARY "dpdk-test")
aux_source_directory("." SRC_FILES)
link_directories(${CMAKEDEMO_BINARY_DIR}/seadp_client)
set(LIBS "tle_l4p" "m" "seadp_client")
add_executable (${BINARY} ${SRC_FILES})
find_package(PkgConfig)
if (PKG_CONFIG_FOUND)
  pkg_check_modules(DPDK REQUIRED "libdpdk")
  if (DPDK_FOUND)    
    target_link_libraries(${BINARY} ${DPDK_LIBRARIES} ${LIBS})
    add_definitions(${DPDK_CFLAGS} ${DPDK_CFLAGS_OTHER})
  endif()
endif()
